[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/script_menu.gd" type="Script" id=1]
[ext_resource path="res://arte_principal.jpg" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44.1781, 18.773 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="imagem_fundo" type="Sprite" parent="."]
position = Vector2( 511.688, 297.341 )
scale = Vector2( 1.27756, 1.32478 )
texture = ExtResource( 2 )

[node name="Fundo" type="ColorRect" parent="."]
margin_left = 21.3575
margin_top = 13.3484
margin_right = 1001.36
margin_bottom = 579.348
color = Color( 0.145098, 0.133333, 0.133333, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fase 1" type="Area2D" parent="Fundo"]
position = Vector2( 123.007, 59.1735 )

[node name="color_fase1" type="ColorRect" parent="Fundo/Fase 1"]
margin_left = 83.0
margin_top = 310.0
margin_right = 159.0
margin_bottom = 350.0
color = Color( 0.243137, 0.231373, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_fase1" type="RichTextLabel" parent="Fundo/Fase 1"]
margin_left = 99.6429
margin_top = 323.864
margin_right = 160.643
margin_bottom = 342.864
text = "FASE 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo/Fase 1"]
position = Vector2( 123.02, 329.479 )
shape = SubResource( 1 )

[node name="Fase 2" type="Area2D" parent="Fundo"]
position = Vector2( 216.729, 60.296 )

[node name="color_fase2" type="ColorRect" parent="Fundo/Fase 2"]
margin_left = 229.0
margin_top = 310.0
margin_right = 317.0
margin_bottom = 350.0
color = Color( 0.243137, 0.231373, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_fase2" type="RichTextLabel" parent="Fundo/Fase 2"]
margin_left = 250.786
margin_top = 324.449
margin_right = 299.786
margin_bottom = 344.449
text = "FASE 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Fundo/Fase 2"]
position = Vector2( 272.307, 331.04 )
shape = SubResource( 1 )

[node name="Fase 3" type="Area2D" parent="Fundo"]
position = Vector2( 164.126, 67.3767 )

[node name="color_fase3" type="ColorRect" parent="Fundo/Fase 3"]
margin_left = 519.0
margin_top = 302.0
margin_right = 606.0
margin_bottom = 342.0
color = Color( 0.243137, 0.231373, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_fase3" type="RichTextLabel" parent="Fundo/Fase 3"]
margin_left = 541.194
margin_top = 316.109
margin_right = 603.194
margin_bottom = 335.109
text = "FASE 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Fundo/Fase 3"]
position = Vector2( 563.302, 323.031 )
shape = SubResource( 1 )

[node name="Iniciar" type="Button" parent="."]
margin_left = 461.539
margin_top = 469.092
margin_right = 565.539
margin_bottom = 512.092
text = "INICIAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ranking" type="Button" parent="."]
margin_left = 464.005
margin_top = 240.935
margin_right = 563.005
margin_bottom = 282.935
text = "RANKING"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="Fundo/Fase 1" to="." method="selec_fase1"]
[connection signal="input_event" from="Fundo/Fase 2" to="." method="selec_fase2"]
[connection signal="input_event" from="Fundo/Fase 3" to="." method="selec_fase3"]
[connection signal="pressed" from="Iniciar" to="." method="iniciar_jogo"]
[connection signal="pressed" from="Ranking" to="." method="_on_Ranking_pressed"]
